--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,13 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
-
-*{
+* {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
+  
 }
 
-
-
-
+.App {
+  min-height: 100vh;
+}
